--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/materialize-css": "^1.0.7",
     "castv2-client": "^1.2.0",
     "electron": "^7.1.7",
     "request": "^2.88.0"
