--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/materialize-css": "^1.0.7",
     "castv2-client": "^1.2.0",
     "electron": "^7.1.7",
+    "electron-localshortcut": "^3.2.1",
     "request": "^2.88.0"
   }
 }
